# openvoiceflow

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_BRIEF.md  LICENSE  PRD.md  PRIVACY.md  PRODUCTION_READINESS.md  README.md  RELEASE.md  RELEASE_v0.3.5_RUNBOOK.md  RELEASE_v0.3.6_RUNBOOK.md  SECURITY.md  SUPPORT.md  VERSIONING.md  build-dmg.sh  install.sh  package.json  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml  release-native.yml  release.yml
assets/: OpenVoiceFlow.icns
docs/: ARCHITECTURE.md  COMPATIBILITY.md  COMPLIANCE.md  DEPLOY_NATIVE.md  THREAT_MODEL.md  appcast.xml  download.html  how-it-works.html  index.html  install.html  llms.txt  press.html  privacy.html  robots.txt  site.js  sitemap.xml  style.css  support.html  terms.html
docs/downloads/: OpenVoiceFlow-0.2.0-arm64.dmg  OpenVoiceFlow-0.2.0-x86_64.dmg  OpenVoiceFlow-0.3.0-arm64.dmg  OpenVoiceFlow-0.3.0-x86_64.dmg  OpenVoiceFlow-0.3.1-arm64.dmg  OpenVoiceFlow-0.3.1-x86_64.dmg  OpenVoiceFlow-0.3.2-arm64.dmg  OpenVoiceFlow-0.3.2-x86_64.dmg  OpenVoiceFlow-0.3.3-arm64.dmg  OpenVoiceFlow-0.3.3-x86_64.dmg  OpenVoiceFlow-0.3.4-arm64.dmg  OpenVoiceFlow-0.3.4-x86_64.dmg  OpenVoiceFlow-0.3.5-arm64.dmg  OpenVoiceFlow-0.3.5-x86_64.dmg  OpenVoiceFlow-0.3.6-arm64.dmg  OpenVoiceFlow-0.3.6-x86_64.dmg
docs/legal/: DPA-template.md  THIRD_PARTY_NOTICES.md
docs/plans/: openvoiceflow-native-mac-app-product-plan.md
docs/superpowers/: pending-v0.3-publish.md
docs/superpowers/audits/: PERSONA_AUDIT.md  PROJECT_AUDIT.md  READINESS_CHECKLIST.md  UX_REVIEW.md
docs/superpowers/plans/: v0.3-readiness.md
docs/superpowers/specs/: v0.3-readiness.md
macos/AppStore/: README.md  project.yml
macos/AppStore/Config/: ExportOptions.plist  Info.plist  OpenVoiceFlowStore.entitlements
macos/AppStore/Metadata/: app-store-connect.json  privacy-labels.md  review-notes.md  submission-checklist.md
macos/AppStore/Metadata/en-US/: description.txt  name.txt  (+3 more)
macos/AppStore/OpenVoiceFlowStore.xcodeproj/: project.pbxproj
macos/AppStore/Resources/: ModelManifest.json  PrivacyInfo.xcprivacy
macos/AppStore/Scripts/: archive-app-store.sh  build-release.sh  prepare-model.sh
macos/AppStore/Sources/: AppDelegate.swift  AppModel.swift  AudioCapture.swift  ContentView.swift  HotKeyMonitor.swift  LocalStore.swift  OpenVoiceFlowStoreApp.swift  WhisperContext.swift
macos/AppStore/Tests/: AppModelTests.swift
macos/AppStore/WhisperPackage/: Package.swift
native/: .gitignore  BUILD_RUNBOOK.md  Info.plist  LAUNCH_RUNBOOK.md  OpenVoiceFlow.entitlements  Package.resolved  Package.swift  README.md  RELEASE_NATIVE_RUNBOOK.md  project.yml
native/OpenVoiceFlow.xcodeproj/: project.pbxproj
native/Resources/: OpenVoiceFlow.icns
native/Sources/OpenVoiceFlow/: AppController.swift  AudioCapture.swift  CleanupProvider.swift  DashboardView.swift  DesignTokens.swift  FeatureStores.swift  HUDController.swift  HotkeyEngine.swift  KnowMeInterview.swift  OnboardingView.swift  OpenVoiceFlowApp.swift  Paster.swift  Permissions.swift  Settings.swift  StatusIcon.swift  Transcriber.swift  Updater.swift
native/design/: 01-system-hud.dc.html  02-menu-bar.dc.html  03-dashboard.dc.html  04-onboarding.dc.html  05-assets-rationale.dc.html
native/scripts/: appcast.sh  build-app.sh
packaging/: OpenVoiceFlowLauncher.m
scripts/: build-local-mac.sh  generate-macos-icon.py  vercel-build.mjs
tests/: test_chmod_600.py  test_ci_and_packaging_metadata.py  test_code_review_fixes.py  test_config_migration.py  test_defensive_loaders.py  test_docs_distribution.py  test_doctor.py  test_fn_hotkey.py  test_hardening.py  test_install_sh.py  test_launch_self_check.py  test_launcher_flows.py  test_macos_app_store.py  test_macos_permissions_packaging.py  test_menubar_initialization.py  test_notify.py  test_onboarding.py  test_openrouter_backend.py  test_overlay_layout.py  test_paste_failure_surfaces.py  test_platform_support.py  test_privacy_defaults.py  test_python39_compat.py  test_smoke.py  test_streamer.py  test_updater.py  test_visibility_and_watchdog.py  test_voice_command_tutor.py  test_voice_commands_count.py
voiceflow/: __init__.py  __main__.py  _secure_io.py  app.py  autostart.py  clipboard.py  commands.py  config.py  context.py  dictionary.py  doctor.py  interview.py  learner.py  menubar.py  notify.py  onboarding.py  overlay.py  platform_support.py  profile.py  recorder.py  search.py  snippets.py  stats.py  streamer.py  styles.py  system.py  transcriber.py  updater.py
voiceflow/llm/: __init__.py  anthropic_backend.py  base.py  gemini.py  groq_backend.py  ollama_backend.py  openai_backend.py  openrouter.py
(+14 files in other folders)
