[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openvoiceflow"
version = "0.2.0"
description = "Free, open-source voice dictation for macOS — local transcription + LLM cleanup"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Shimoverse"}]
requires-python = ">=3.9"
keywords = ["voice", "dictation", "speech-to-text", "whisper", "macos", "openvoiceflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "sounddevice>=0.4",
    "numpy>=1.20",
    "pynput>=1.7",
]

[project.optional-dependencies]
menubar = ["rumps>=0.4"]
overlay = ["pyobjc-framework-Cocoa>=9.0"]
all = ["rumps>=0.4", "pyobjc-framework-Cocoa>=9.0"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "build>=1.0",
    "twine>=4.0",
]

[project.scripts]
openvoiceflow = "voiceflow.__main__:main"

[project.urls]
Homepage = "https://github.com/shimoverse/openvoiceflow"
Issues = "https://github.com/shimoverse/openvoiceflow/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: tests that take more than a second",
    "integration: tests that require external resources (network, brew, etc.)",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
per-file-ignores = {"voiceflow/llm/__init__.py" = ["F401"]}  # re-exports
