[build-system]
# license = "MIT" (PEP 639 SPDX string) requires setuptools >= 77; a lower
# floor only works by luck of build isolation grabbing the latest.
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openvoiceflow"
version = "0.3.2"
description = "Free voice dictation for macOS — local transcription + optional LLM cleanup"
readme = "README.md"
license = "MIT"
authors = [{name = "Shimoverse"}]
requires-python = ">=3.9"
keywords = ["voice", "dictation", "speech-to-text", "whisper", "macos", "openvoiceflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "sounddevice>=0.4",
    "numpy>=1.20",
    "pynput>=1.7",
]

[project.optional-dependencies]
menubar = ["rumps>=0.4"]
overlay = ["pyobjc-framework-Cocoa>=9.0"]
all = ["rumps>=0.4", "pyobjc-framework-Cocoa>=9.0"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "build>=1.0",
    "twine>=4.0",
]

[project.scripts]
openvoiceflow = "voiceflow.__main__:main"

[project.urls]
Homepage = "https://openvoiceflow.vercel.app/"
Download = "https://openvoiceflow.vercel.app/download.html"
Source = "https://github.com/shimoverse/openvoiceflow"
Issues = "https://github.com/shimoverse/openvoiceflow/issues"

[tool.setuptools.packages.find]
include = ["voiceflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: tests that take more than a second",
    "integration: tests that require external resources (network, brew, etc.)",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
per-file-ignores = {"voiceflow/llm/__init__.py" = ["F401"]}  # re-exports
